Fixed some layout issues with my clouds

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,7 +36,7 @@ body{
 }
 
 body, article, p, ul,footer {
-	border: solid black 2px;
+	/*border: solid black 2px;*/
 	font-family: sans-serif;
 	font-size: 1em;
 	/*background-color: #DCDCDD;*/
@@ -59,7 +59,12 @@ body {
 
 /*Navigation Bar*/
 .nav-bar{
-	background-color: #3A0842;
+	/*background-color: #3A0842;*/
+	/*background-color: #FFFFFF;*/
+	/*background: rgba(0,0,0,0);*/
+	background: rgba(58,8,66,0.3);
+
+
 	padding: 0.1em;
 	padding-right: 2em;
 	border: none;
@@ -78,7 +83,9 @@ body {
 
 .nav-bar ul{
 	border: none;
-	background-color: #3A0842;
+	/*background-color: #3A0842;*/
+	/*background-color: #FFFFFF;*/
+	background: rgba(0,0,0,0);
 	display: flex;
 	justify-content: flex-end;
 
@@ -95,12 +102,14 @@ a {
 }
 
 .nav-bar a:link {
+	/*color: black;*/
 	color: white;
 	font-size: 1em;
 	font-weight: 600;
 }
 
 .nav-bar a:visited {
+	/*color: black;*/
 	color: white;
 }
 
@@ -183,7 +192,7 @@ h1 {
 }
 
 .hero-2 .clouds img {
-	/*border: solid white 10px;*/
+	/*border: solid white 10px; */
 	position: absolute;
 	top: 0;
 	max-width: 100%;
@@ -206,18 +215,23 @@ h1 {
 
 
 .hero-2{
-	background-image: url("/assets/img/atlas-shrugged-3.png");
+	background-image: url("/assets/img/atlas-shrugged.png");
 	min-height: 60em;
 	width: 100%;
 	background-repeat: no-repeat;
+	background-size: cover;
 	background-position: top;
+	position: relative;
+	width: 100%;
+	height: 100vh;
 
 
 }
 
 /*Hero cocolor: #0082DD or #006AB6*/
 .hero-1{
-	background-color: #0082DD;
+	/*background-color: #0082DD;*/
+	background-color: white;
 	min-height: 60em;
 	width: 100%;
 }
@@ -258,6 +272,9 @@ h1 {
 	padding-right: 0em;
 }
 
+.hero-text .button{
+	z-index: 1;
+}
 /*The button styles*/
 .button {
 
